--- a/src/languages/es.json5
+++ b/src/languages/es.json5
@@ -544,7 +544,7 @@
   },
   'file-storage-days-ago': {
     original: '{x}d ago',
-    value: 'Hace {x} dias'
+    value: 'Hace {x} días'
   },
   'file-storage-month-ago': {
     original: '> 1month ago',
@@ -595,7 +595,7 @@
   },
   'tab-recovery-explanation': {
     original: 'Recovery data is only kept for a little while. Save to ensure your work is not lost.',
-    value: 'Los datos de recuperación solo se mantienen por un tiempo. Guarda tu trabajo para evitar perdidas.'
+    value: 'Los datos de recuperación solo se mantienen por un tiempo. Guarda tu trabajo para evitar pérdidas.'
   },
   'tab-recovery-total-quota-label': {
     original: 'Total:',
@@ -615,7 +615,7 @@
   },
   'tab-recovery-delete-confirmation': {
     original: 'Delete this recovery? Deletion can not be undone.',
-    value: '¿Borrar esta recuperación? ESta acción no se puede revertir '
+    value: '¿Borrar esta recuperación? Esta acción no se puede revertir '
   },
   'tab-recovery-failed-to-recover': {
     original: 'Failed to recover tab.',
@@ -758,7 +758,7 @@
   },
   'cropcopy-mask': {
     original: 'Mask unselected',
-    value: 'Mascara sin seleccionar'
+    value: 'Máscara sin seleccionar'
   },
   'cropcopy-click-hold': {
     original: 'Right-click or press hold to copy.',
@@ -856,7 +856,7 @@
   'filter-crop-description': {
     hint: 'descriptions explain the "filter" a tiny bit. Most importantly it says if it’s applied to a single layer, or the entire image (all layer)',
     original: 'Crop or extend the image.',
-    value: 'Recortar o amplíar la imagen.'
+    value: 'Recortar o ampliar la imagen.'
   },
   'filter-crop-left': {
     original: 'Left',
@@ -944,7 +944,7 @@
   'filter-transform-empty-selection': {
     hint: 'nothing on the layer, in selected area (via select tool), just transparency',
     original: 'Layer is empty in selected area.',
-    value: 'La capa está vacia en el área seleccionada'
+    value: 'La capa está vacía en el área seleccionada'
   },
   'filter-transform-title': {
     hint: 'same as the button, but can be longer',
