Add curriculum backgrounds and lesson overlay updates

--- a/src/languages/_base-en.json5
+++ b/src/languages/_base-en.json5
@@ -1091,7 +1091,7 @@ Renaming a key across multiple language files:
   "learn-grade-grade1": "Grade 1",
   "learn-grade-grade2": "Grade 2",
   "learn-grade-grade3": "Grade 3",
-  "learn-unit-line": "Lines",
+  "learn-unit-line": "Dot/Line",
   "learn-unit-shape": "Shapes",
   "learn-unit-color": "Colors",
   "learn-overall-progress": "Overall Progress",
